Change namespace into asappi\phpmvc

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "167908@sskky.fi"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "asappi\\phpmvc": "."
+        }
+    }
 }
