--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "asappi\\phpmvc": "."
+            "asappi\\phpmvc\\": "."
         }
     }
 }
